# LocalFlow

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
localflow/: __init__.py  app.py  appwindow.py  audio.py  cli.py  commands.py  config.py  context.py  dashboard.py  dictionary.py  formatting.py  history.py  hotkeys.py  injector.py  llm.py  llm_local.py  menubar.py  overlay.py  sounds.py  streaming.py  tray.py  vad.py
localflow/engines/: __init__.py  base.py  faster_whisper_engine.py  mock.py  registry.py  whispercpp_engine.py
localflow/static/: index.html
scripts/: app_stub.c  build_app.sh  generate_icon.py
tests/: conftest.py  test_audio_vad.py  test_cli.py  test_commands.py  test_config_context.py  test_controller.py  test_dictionary.py  test_engines.py  test_focus.py  test_formatting.py  test_history.py  test_hotkeys.py  test_integration_whisper.py  test_llm.py  test_llm_local.py  test_streaming_dashboard.py  test_ui.py
